src/test/resources/invalid_tests/UnknownVariableName.cnna
architecture UnknownVariableName{
    def input Q(-oo:+oo)^{inputs=10} in
    def output Q(0:1)^{2} out

    in ->
    FullyConnected(units=64) ->
    Tanh() ->
    FullyConnected(units=classes) ->
    Softmax() ->
    out
}